@@ -1,3 +1,15 @@
+2016-12-22  Jer Noble  <jer.noble@apple.com>
+
+        Muted media element playback should not interrupt other audio playback
+        https://bugs.webkit.org/show_bug.cgi?id=166347
+
+        Reviewed by Eric Carlson.
+
+        * TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
+        * TestWebKitAPI/Tests/WebKit/ios/AudioSessionCategoryIOS.mm:
+        (TestWebKitAPI::TEST):
+        * TestWebKitAPI/Tests/WebKit/ios/video-with-muted-audio.html: Added.
+
 2016-12-22  Alejandro G. Castro  <alex@igalia.com>
 
         [WebRTC] Add support for runtime PeeConnection setting, required after r209757
